<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_eclipse_left" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_eclipse_top" />

    <ImageView
        android:id="@+id/mainImageMainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/getStartedButton"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="40dp"
        android:paddingVertical="10dp"
        android:text="@string/main_button"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="@+id/secondaryText"
        app:layout_constraintStart_toStartOf="@+id/secondaryText"
        app:layout_constraintTop_toBottomOf="@+id/secondaryText" />

    <TextView
        android:id="@+id/mainText"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/main_text_main"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/mainImageMainActivity"
        app:layout_constraintStart_toStartOf="@+id/mainImageMainActivity"
        app:layout_constraintTop_toBottomOf="@+id/mainImageMainActivity" />

    <TextView
        android:id="@+id/secondaryText"
        style="@style/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:text="@string/main_description"
        app:layout_constraintEnd_toEndOf="@+id/mainText"
        app:layout_constraintStart_toStartOf="@+id/mainText"
        app:layout_constraintTop_toBottomOf="@+id/mainText" />

</androidx.constraintlayout.widget.ConstraintLayout>
